--- a/style.css
+++ b/style.css
@@ -22,11 +22,13 @@ nav{
 
 nav ol{
   list-style: none;
+  padding: 0;
 }
 
 article{
   float:left;
   padding:20px;
+  width:500px;
 }
 
 #control{
